--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+.logo {
+  font-size: 300%;
+}
+
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
