--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,8 +9,8 @@
  *
  * @import "tailwindcss/base";
  */
- @tailwind base;
-
+ /* @tailwind base; */
+ @import "tailwindcss/base"
  /**
   * This injects any component classes registered by plugins.
   *
@@ -18,7 +18,8 @@
   *
   * @import "tailwindcss/components";
   */
-@tailwind components;
+/* @tailwind components; */
+ @import "tailwindcss/components"
 /**
   * Here you would add any of your custom component classes; stuff that you'd
   * want loaded *before* the utilities so that the utilities could still
@@ -43,7 +44,8 @@
   *
   * @import "tailwindcss/utilities";
   */
-@tailwind utilities;
+/* @tailwind utilities; */
+@import "tailwindcss/utilities"
 /**
   * Here you would add any custom utilities you need that don't come out of the
   * box with Tailwind.
