enable tailwind styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+
 /**
  * This injects Tailwind's base styles, which is a combination of
  * Normalize.css and some additional base styles.
@@ -9,8 +10,8 @@
  *
  * @import "tailwindcss/base";
  */
- /* @tailwind base; */
- @import "tailwindcss/base"
+ @tailwind base;
+
  /**
   * This injects any component classes registered by plugins.
   *
@@ -18,8 +19,7 @@
   *
   * @import "tailwindcss/components";
   */
-/* @tailwind components; */
- @import "tailwindcss/components"
+@tailwind components;
 /**
   * Here you would add any of your custom component classes; stuff that you'd
   * want loaded *before* the utilities so that the utilities could still
@@ -44,8 +44,7 @@
   *
   * @import "tailwindcss/utilities";
   */
-/* @tailwind utilities; */
-@import "tailwindcss/utilities"
+@tailwind utilities;
 /**
   * Here you would add any custom utilities you need that don't come out of the
   * box with Tailwind.
